--- a/InfocenterWPF/FormMessage.xaml
+++ b/InfocenterWPF/FormMessage.xaml
@@ -1,12 +1,30 @@
-﻿<Window x:Class="InfocenterWPF.FormMessage"
+﻿<Window x:Name="Forma" x:Class="InfocenterWPF.FormMessage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InfocenterWPF"
         mc:Ignorable="d"
-        Title="Сообщение (нет соединения)" Height="300" Width="300" Closing="Window_Closing">
+        Title="Сообщение (нет соединения)" Height="340" Width="800" Closing="Window_Closing" WindowStartupLocation="CenterScreen" MinWidth="600" MinHeight="300">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="48"/><RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="59*"/>
+            <ColumnDefinition Width="25*" />
+        </Grid.ColumnDefinitions>
+        <Grid >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0"/>
+            <Button Grid.Column="1"/>
+            <Button Grid.Column="2"/>
+        </Grid>
+
     </Grid>
 </Window>
