--- a/InfocenterWPF/FormMessage.xaml
+++ b/InfocenterWPF/FormMessage.xaml
@@ -8,7 +8,9 @@
         Title="Сообщение (нет соединения)" Height="340" Width="800" Closing="Window_Closing" WindowStartupLocation="CenterScreen" MinWidth="600" MinHeight="300">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="48"/><RowDefinition/>
+            <RowDefinition Height="48"/>
+            <RowDefinition/>
+            <RowDefinition Height="59"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
@@ -24,6 +26,19 @@
             <Button Grid.Column="0"/>
             <Button Grid.Column="1"/>
             <Button Grid.Column="2"/>
+        </Grid>
+        <Grid Grid.Column="1" Height="auto" Grid.Row="2" Width="auto">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="83"/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="66"/>
+            </Grid.ColumnDefinitions>
+            <TextBox Grid.Column="1" Height="35" Margin="10" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="auto"/>
+            <Button Content="&gt;&gt;" Grid.Column="2" Width="auto"/>
+
+
+            <Label Content="Сообщение" HorizontalAlignment="Right" VerticalAlignment="Center" Height="auto" Width="auto"/>
+
         </Grid>
 
     </Grid>
