--- a/InfocenterWPF/FormMessage.xaml
+++ b/InfocenterWPF/FormMessage.xaml
@@ -33,11 +33,11 @@
                 <ColumnDefinition/>
                 <ColumnDefinition Width="66"/>
             </Grid.ColumnDefinitions>
-            <TextBox Grid.Column="1" Height="35" Margin="10" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="auto"/>
-            <Button Content="&gt;&gt;" Grid.Column="2" Width="auto"/>
+            <TextBox Grid.Column="1" Height="35" Margin="0,10" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="auto"/>
+            <Button Content="&gt;&gt;" Grid.Column="2" Width="auto" Margin="5,15"/>
 
 
-            <Label Content="Сообщение" HorizontalAlignment="Right" VerticalAlignment="Center" Height="auto" Width="auto"/>
+            <Label Content="Сообщение" HorizontalAlignment="Right" VerticalAlignment="Center" Height="auto" Width="auto" Margin="0,0,5,0"/>
 
         </Grid>
 
